cardbox will align properly vertically

--- a/ngDirectives/cardBox/cardBox.css
+++ b/ngDirectives/cardBox/cardBox.css
@@ -28,6 +28,8 @@
 ul.cardbox {
   display: flex;
   flex-wrap: wrap;
+  justify-content: start;
+  align-content: start;
 }
 ul.cardbox li:nth-child(2) {
   margin-top: 1.25rem;
