--- a/ngDirectives/cardBox/cardBox.less
+++ b/ngDirectives/cardBox/cardBox.less
@@ -4,6 +4,8 @@
 ul.cardbox {
   display: flex;
   flex-wrap: wrap;
+  justify-content: start;
+  align-items: start;
 
   li:nth-child(2) {
     margin-top: 1.25rem;
