--- a/src/workflow/cwWorkflow.less
+++ b/src/workflow/cwWorkflow.less
@@ -10,6 +10,21 @@
   .readonly {
     background-color: @readonlyColor;
   }
+
+  .diagram_draft_viewer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    img {
+      max-width: 100%;
+    }
+    a {
+      text-align: center;
+      font-size: large;
+      font-weight: 700;
+      margin-bottom: 3rem;
+    }
+  }
   .selectDropDownList {
     padding: 5px;
     font-size: 12px;
