--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -252,6 +252,7 @@ body:not(.cw_print) .page-content-wrap .page-top {
           padding-right: 1rem;
           padding-top: 0rem;
           padding-bottom: 0rem;
+          margin: auto;
 
           .link {
             padding: 0.2rem;
