--- a/src/cwBackup/cwBackup.less
+++ b/src/cwBackup/cwBackup.less
@@ -5,6 +5,10 @@
 .cwLayoutBackup {
   width: 100%;
 
+  .saveButton {
+    position: absolute;
+    right: 15%;
+  }
   .red {
     color: red;
   }
