--- a/src/cwBackup/cwBackup.css
+++ b/src/cwBackup/cwBackup.css
@@ -28,6 +28,10 @@
 .cwLayoutBackup {
   width: 100%;
 }
+.cwLayoutBackup .saveButton {
+  position: absolute;
+  right: 15%;
+}
 .cwLayoutBackup .red {
   color: red;
 }
