--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -73,9 +73,16 @@ body:not(.cw_print) .page-content-wrap .page-top {
       .fa.expendIcon {
         font-size: 24px;
       }
+      .loadingDisplay{
+        font-size: 24px;
+        color : @cwLoadingIconColor;
+        margin-left : 4px;
+      }
       .extendableTitle {
         display: flex;
         align-items: center;
+
+
         .homePage_display_title {
           flex: 1;
         }
