--- a/src/property/property.less
+++ b/src/property/property.less
@@ -28,8 +28,8 @@
 }
 
 .cw-accordion-header .cwTrueFaIcon {
-  color: hsl(hue(green), saturation(green), min(max(100-lightness(@cwGlobalLinkTextColor), 30), 70));
+  color: rgb(51, 192, 51);
 }
 .cw-accordion-header .cwFalseFaIcon {
-  color: hsl(hue(red), saturation(red), min(max(100-lightness(@cwGlobalLinkTextColor), 30), 70));
+  color: rgb(243, 72, 72);
 }
