--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -370,6 +370,16 @@ body .main-nav .main-level a.cw-menu-link.activeLink {
   height: 30px;
 }
 
+.separatorTextMenu {
+  height: 30px;
+  .cw-menu-icon-zone {
+    width: 10px;
+  }
+  .menuText {
+    font-weight: bolder;
+  }
+}
+
 .separatorMenu::after {
   content: "";
   width: 70%;
