adding flex to the tag

--- a/ngDirectives/niceList/niceList.less
+++ b/ngDirectives/niceList/niceList.less
@@ -19,11 +19,16 @@
       margin-top: 1px;
       display: flex;
       flex-wrap: wrap;
+      .tagsProp, .tagsAsso {
+        display: flex;
+        flex-wrap: wrap;
+      }
       .tag {
         border-radius: 2px;
         padding: 2px 4px 2px 4px;
         margin-right: 2px;
         margin-bottom: 2px;
+
       }
     }
 
