--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -391,6 +391,9 @@ body .main-nav .main-level a.cw-menu-link.activeLink {
   margin-left: 15%;
 }
 
+.cwMenuImage {
+  width: 17px;
+}
 .emptyZone {
   display: flex;
   img {
